# mcanbus

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
examples/: candump.rs  cangen.rs  list_interfaces.rs  multireader.rs
mcanbus/: Cargo.toml  README.md
mcanbus/src/: consts.rs  frame.rs  iface.rs  isotp.rs  lib.rs  reader.rs  socket.rs
mcanbus/tests/: integration_vcan.rs
socketcan-mcp/: Cargo.toml  README.md
socketcan-mcp/src/: main.rs
