[workspace]
resolver = "2"
members = ["mcanbus", "socketcan-mcp"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.94"
authors = ["Dr. Michael 'Mickey' Lauer <mickey@vanille-media.de>"]
license = "MIT"
repository = "https://github.com/mickeyl/mcanbus"

[workspace.dependencies]
mcanbus = { path = "mcanbus", version = "0.2.0" }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
