[package]
name = "socketcan-mcp"
description = "Model Context Protocol server exposing SocketCAN interfaces to AI agents — list, send, capture, request/response, ISO-TP/UDS."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = ["can", "canbus", "socketcan", "mcp", "agent"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
mcanbus = { workspace = true }
libc = { workspace = true }
rmcp = { version = "0.8", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "time"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
